--- a/Index.html
+++ b/Index.html
@@ -1,34 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>CarCOOL</title>
 </head>
+
 <body>
 
- <!-- HOME Bienvenida -->
+    <!-- HOME Bienvenida -->
 
- <!-- FORMULARIO Cotizador -->
+    <!-- FORMULARIO Cotizador -->
     <!-- PIDE
         - Marca(Chevrolet, Ford  o Nissan)
         - Modelo(2019  y 2020)
         - Presupuesto(15,000 - 150,000)
         - Caja de Velocidades: [Manual O Automatico]
             -->
+    <form>
 
- <!-- RESULTADOS DE LA BUSQUEDA -->
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Modelo</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+                <option id="Chevrolet">Chevrolet</option>
+                <option id="Ford">Ford</option>
+                <option id="Nissan">Nissan</option>
+            </select>
+        </div>
+        
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Marca</label>
+            <select multiple class="form-control" id="exampleFormControlSelect1">
+                <option id="y2019">2019</option>
+                <option id="y2020">2020</option>
+            </select>
+        </div>
+        
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Transmision</label>
+            <select multiple class="form-control" id="exampleFormControlSelect1">
+                <option id="T-Manual">Manual</option>
+                <option id="T-Automatica">Automatica</option>
+            </select>
+        </div>
 
- <!-- QUIENES SOMOS (OPCIONAL) -->
+        <div class="form-group">
+            <label for="formControlRange">Presupuesto</label>
+            <input type="range" class="form-control-range" id="formControlRange">
+        </div>
 
- <!-- FOOTER -->
+        <button class="btn btn-primary align-self-center" type="submit" id="btnBuscar">Buscar</button>
 
+    </form>
+
+    <!-- RESULTADOS DE LA BUSQUEDA -->
+
+    <!-- QUIENES SOMOS (OPCIONAL) -->
+
+    <!-- FOOTER -->
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
     <script src="bd.js"></script>
     <script src="main.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
+
 </html>
