Form Sencillo y Estructura de Card

--- a/Index.html
+++ b/Index.html
@@ -87,7 +87,21 @@
 
     <!-- RESULTADOS DE LA BUSQUEDA -->
 
-        <!-- Aqui empezamos los rows para dibujar los cards -->
+    <!-- Aqui empezamos los rows para dibujar los cards -->
+    <div class="container m-1">
+        <div class="row">
+            <div class="card" style="width: 15rem;" id="carCard">
+                <img src="https://i.pinimg.com/236x/85/c4/94/85c494c7305846ba3be667ea25f88650.jpg" class="card-img-top" alt="...">
+                <ul class="list-group list-group-flush">
+                    <span class="font-weight-bold">Marca:</span><li class="list-group-item">autos[i].make</li>
+                    <span class="font-weight-bold">Modelo:</span><li class="list-group-item">autos[i].model</li>
+                    <span class="font-weight-bold">Colores:</span><li class="list-group-item">autos[i].colors</li>
+                    <span class="font-weight-bold">Precio:</span><li class="list-group-item">autos[i].price</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 
     <!-- QUIENES SOMOS (OPCIONAL) -->
 
