se agregaron cards a main.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body style="margin: 1em;">
 
     <!-- HOME Bienvenida -->
-    <header>
+    <!-- <header>
         <div class="fixed-top">
             <div class="collapse" id="navbarToggleExternalContent">
                 <div class="bg-dark p-4">
@@ -33,7 +33,7 @@
                 </button>
             </nav>
         </div>
-    </header>
+    </header> -->
 
     <!-- FORMULARIO Cotizador -->
     <!-- PIDE
@@ -115,8 +115,8 @@
 
     <!-- Aqui empezamos los rows para dibujar los cards -->
     <div class="container m-1">
-        <div class="row">
-            <div class="card" style="width: 15rem;" id="carCard">
+        <div class="row fix-card" id="card-container">
+            <!-- <div class="card" style="width: 15rem;" id="carCard">
                 <img src="https://i.pinimg.com/236x/85/c4/94/85c494c7305846ba3be667ea25f88650.jpg" class="card-img-top"
                     alt="...">
                 <ul class="list-group list-group-flush">
@@ -129,16 +129,17 @@
                     <span class="font-weight-bold">Precio:</span>
                     <li class="list-group-item">autos[i].price</li>
                 </ul>
-            </div>
+            </div> -->
+            
         </div>
     </div>
 
     <!-- FOOTER -->
-    <footer>
+    <!-- <footer>
         <div class="fixed-bottom bg-dark p-1">
             <h4 class="text-white h5 p-1">Espera a nuestro proximo exito en el Fuck Up Nights mas cercano a tu localidad.</h4>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
