--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <li class="list-group-item">autos[i].price</li>
                 </ul>
             </div> -->
-            
+
         </div>
     </div>
 
@@ -140,6 +140,25 @@
             <h4 class="text-white h5 p-1">Espera a nuestro proximo exito en el Fuck Up Nights mas cercano a tu localidad.</h4>
         </div>
     </footer> -->
+
+    <div class="modal" tabindex="-1" role="dialog" id="modal-form-error">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Error!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Algún campo es incorrecto o está vacío!</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
