se separo el codigo en funciones

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
     </footer> -->
 
-    <div class="modal" tabindex="-1" role="dialog" id="modal-form-error">
+    <div class="modal" tabindex="-1" role="dialog" id="modal-form-vacio">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
@@ -151,7 +151,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <p>Algún campo es incorrecto o está vacío!</p>
+              <p>Algún campo está vacío!</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -159,7 +159,7 @@
           </div>
         </div>
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
