--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             -->
     <div class="form">
 
+        <!-- <div class="d-md-none" id="inputLine1"> -->
         <div class="" id="inputLine1">
 
             <div class="input-group m-1">
@@ -70,7 +71,7 @@
         <!-- Responsive -->
         <!-- <div class="d-flex flex-row" id="inputLine1">
 
-            <div class="input-group m-1">
+            <div class="input-group m-1 d-none d-sm-block">
                 <div class="input-group-prepend">
                     <span class="input-group-text text-white bg-dark" style="font-weight: bold;" id="basic-addon1">Modelo B</span>
                 </div>
@@ -78,7 +79,7 @@
                     aria-label="Modelo" aria-describedby="basic-addon1" id="inputModelo">
             </div>
     
-            <div class="input-group m-1">
+            <div class="input-group m-1 d-none d-sm-block">
                 <div class="input-group-prepend">
                     <span class="input-group-text text-white bg-dark" style="font-weight: bold;" id="basic-addon1">Marca</span>
                 </div>
